Added staff filter to reports

--- a/templates/admin_reports.html
+++ b/templates/admin_reports.html
@@ -106,7 +106,9 @@
 
         <!-- RESTORED DATE PICKER -->
         <input type="date" id="dailyDate">
-
+        <select id="staffSelect">
+    <option value="">All Staff</option>
+</select>
         <button class="action" onclick="viewDaily()">View</button>
         <button class="action" onclick="downloadDailyExcel()">Excel</button>
         <button class="action" onclick="downloadDailyPDF()">PDF</button>
