--- a/templates/admin_staff.html
+++ b/templates/admin_staff.html
@@ -64,6 +64,7 @@
 <header>
     <span>👥 Staff Management</span>
     <button class="btn-back" onclick="goBack()">Back</button>
+    <button class="btn-blue" onclick="goBilling()">Home</button>
 </header>
 
 <div class="container">
