--- a/templates/billing.html
+++ b/templates/billing.html
@@ -386,6 +386,10 @@ function goChangePassword() {
     window.location.href = "/ui/change-password";
 }
 
+function goHome() {
+    window.location.href = "/ui/billing";
+}
+
 function logout() {
     localStorage.removeItem("user_id");
     localStorage.removeItem("role");
